--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc 1>&2",
+    "prestart": "npm run build",
     "start": "node ./lib/main.js",
     "debug": "node --inspect-brk=9229 ./lib/main.js",
     "clean": "rimraf lib",
@@ -15,17 +16,19 @@
   },
   "dependencies": {
     "@bentley/backend-itwin-client": "^2.13.0",
-    "@bentley/bentleyjs-core": "^2.13.0",
-    "@bentley/ecschema-metadata": "^2.13.0",
-    "@bentley/frontend-authorization-client": "^2.13.0",
-    "@bentley/geometry-core": "^2.13.0",
     "@bentley/imodelhub-client": "^2.13.0",
-    "@bentley/imodeljs-backend": "^2.13.0",
-    "@bentley/imodeljs-common": "^2.13.0",
-    "@bentley/imodeljs-i18n": "^2.13.0",
     "@bentley/itwin-client": "^2.13.0",
     "@bentley/rbac-client": "^2.13.0",
     "@bentley/telemetry-client": "^2.13.0",
+    "@itwin/browser-authorization": "latest",
+    "@itwin/core-backend": "^3.0.0",
+    "@itwin/core-bentley": "^3.0.0",
+    "@itwin/core-common": "^3.0.0",
+    "@itwin/core-geometry": "^3.0.0",
+    "@itwin/core-i18n": "^3.0.0",
+    "@itwin/ecschema-metadata": "^3.0.0",
+    "@itwin/imodels-client-management": "^1.0.1",
+    "@itwin/service-authorization": "^0.6.2",
     "dotenv": "^8.2.0",
     "minimist": "^1.2.5",
     "onanykey": "^1.0.1"
@@ -33,8 +36,8 @@
   "devDependencies": {
     "@types/minimist": "^1.2.0",
     "@types/node": "^14.0.14",
-    "@typescript-eslint/parser": "4.16.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
     "eslint": "^6.8.0",
     "rimraf": "^2.6.2",
     "typescript": "~4.2.0"
